# tphenotype

./: .coveragerc  .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_venv.sh  tox.ini
data/real-world/physionet/: extract data.ipynb  physionet_preprocessing.py  preprocessing.ipynb  selected_data.npz
data/real-world/physionet/lib/: utils.py
data/synthetic/: DataGeneration.ipynb  data-mixed.npz  data-periodicity.npz  data-sigmoid.npz  data_generation.ipynb
notebooks/: test_on_synthetic_data.ipynb  visualization.py
notebooks/appendix/: dataset_statistics.ipynb  experiment_icu.ipynb  impact_of_sampling_rate.ipynb  laplace_encoder.ipynb  visualization.py
notebooks/benchmark/: Summary.ipynb  analysis.py  benchmark.py  benchmarks.py  data_split.py  external_benchmarks.py  hs_K.py  hs_K_orig.py  hs_e2py.py  hs_e2pz.py  hs_encoder.py  hs_predictor.py  hs_spectral.py  parameter_selection.sh  read_optimal_hparams.py  run_experiment.sh  summary.ipynb
notebooks/case_study/: Experiment_ADNI.ipynb  experiment_adni.ipynb
src/syncphenotyping/: __init__.py
src/syncphenotyping/baselines/: kmlaplace.py
src/syncphenotyping/model/: __init__.py  encoder.py  synctwin_solver.py
src/syncphenotyping/utils/: __init__.py  lexsort.cpp  metrics.py  utils.py
src/tphenotype/: __init__.py  base_model.py  nn.py
src/tphenotype/baselines/: __init__.py  e2p.py  kmdtw.py  kme2p.py  kmlaplace.py  s2s.py  spectrale2p.py
src/tphenotype/model/: __init__.py  cluster_explainer.py  encoder.py  graph_kmeans.py  predictor.py  predictor_joint.py  symbolic_eval.py  sync_clustering.py  synctwin_solver.py
src/tphenotype/utils/: __init__.py  aggregator.py  dataset.py  decorators.py  entropy.py  lexsort.cpp  lexsort.pyx  losses.py  metrics.py  utils.py
tests/: conftest.py
