[build-system]
requires = ["setuptools>=43.0.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "tphenotype"
description="T-Phenotype: Discovering Phenotypes of Predictive Temporal Patterns in Disease Progression"
license = {text = "BSD 3-Clause License"}
version = "0.0.0"
requires-python = ">=3.7, <4"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "sympy",
    "cython",
    "torch",
    "pyclustering",
    "networkx"
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages]
find = {namespaces = true, where = ["src"]}


[tool.pyright]
include = []
exclude = ["**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv"
]
ignore = []
stubPath = ""
venvPath = ""
venv = "venv"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.yapf]
based_on_style = "yapf"
indent_width = 4
spaces_before_comment = 4
column_limit = 120
split_before_logical_operator = true
