[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "cython~=0.29"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py38', 'py39', 'py310']

[tool.isort]
known_first_party = "tphenotype"
profile = "black"
src_paths = ["src"]

[tool.pylint]
disable = "R,C"
generated-members = "tensorflow.*,torch.*"
ignored-modules = "tensorflow.compat,tensorflow.keras,tensorflow.python.ops,scipy.special"

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  ".venv",
  "venv"
]
ignore = []
include = []
reportMissingImports = true
reportMissingTypeStubs = false
stubPath = ""
venv = "venv"
venvPath = ""

[tool.yapf]
based_on_style = "yapf"
column_limit = 120
indent_width = 4
spaces_before_comment = 4
split_before_logical_operator = true
